samples/_failures_safe/1761483901_1e09e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46aec89d.c:166:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  166 | void tokenize
      | ^~~~
